force-app/main/default/objects/Case/fields/LT_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Base__c</fullName>
    <description>Base de entrega responsavel pela tratativa.</description>
    <label>Base Responsavel</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Chamados SAC</relationshipLabel>
    <relationshipName>LT_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>