force-app/main/default/objects/Case/fields/LT_CSAT_Comment__c.field-meta.xml
<CustomField>
    <fullName>LT_CSAT_Comment__c</fullName>
    <description>Comentario livre do cliente sobre o atendimento.</description>
    <label>Comentario CSAT</label>
    <type>Text</type>
    <length>255</length>
</CustomField>