force-app/main/default/objects/Case/fields/LT_CSAT_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_CSAT_Date__c</fullName>
    <description>Data em que a nota CSAT foi coletada.</description>
    <label>Data da Pesquisa CSAT</label>
    <type>Date</type>
</CustomField>