force-app/main/default/objects/Case/fields/LT_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>LT_CSAT_Score__c</fullName>
    <description>Nota de satisfacao do cliente com o atendimento (1 a 5), registrada ao fechar o chamado.</description>
    <inlineHelpText>Nota de 1 (muito insatisfeito) a 5 (muito satisfeito).</inlineHelpText>
    <label>Nota CSAT</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>