force-app/main/default/objects/Case/fields/LT_Customer_Channel__c.field-meta.xml
<CustomField>
    <fullName>LT_Customer_Channel__c</fullName>
    <description>Canal pelo qual o cliente acionou o SAC.</description>
    <label>Canal de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>App do Cliente</fullName>
            </value>
            <value>
                <fullName>Redes Sociais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>