force-app/main/default/objects/Case/fields/LT_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>LT_Days_Open__c</fullName>
    <description>Dias corridos desde a abertura (ou ate o fechamento).</description>
    <label>Dias em Aberto</label>
    <formula>IF(IsClosed, (ClosedDate - CreatedDate), (NOW() - CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>