force-app/main/default/objects/Case/fields/LT_Driver_Involved__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Involved__c</fullName>
    <description>Motorista relacionado ao chamado (assinado nao recebido, avaria, postura).</description>
    <label>Motorista Envolvido</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Chamados SAC</relationshipLabel>
    <relationshipName>LT_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>