force-app/main/default/objects/Case/fields/LT_Driver_Penalized__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Penalized__c</fullName>
    <description>Marcado quando o motorista foi penalizado em decorrencia do chamado.</description>
    <label>Motorista Penalizado</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>