force-app/main/default/objects/Case/fields/LT_Driver_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Response_Deadline__c</fullName>
    <description>Prazo para o motorista resolver antes do chamado virar PNR.</description>
    <label>Prazo do Motorista</label>
    <type>DateTime</type>
</CustomField>