force-app/main/default/objects/Case/fields/LT_First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_First_Response_Date__c</fullName>
    <description>Data/hora da primeira resposta ao cliente.</description>
    <label>Primeira Resposta em</label>
    <type>DateTime</type>
</CustomField>