force-app/main/default/objects/Case/fields/LT_First_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>LT_First_Response_Hours__c</fullName>
    <description>Horas entre a abertura do chamado e a primeira resposta.</description>
    <label>Horas ate 1a Resposta</label>
    <formula>IF(ISBLANK(LT_First_Response_Date__c), NULL, (LT_First_Response_Date__c - CreatedDate) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>