force-app/main/default/objects/Case/fields/LT_Forwarded_To_Driver_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Forwarded_To_Driver_Date__c</fullName>
    <description>Data/hora em que o chamado foi encaminhado ao motorista.</description>
    <label>Encaminhado ao Motorista em</label>
    <type>DateTime</type>
</CustomField>