force-app/main/default/objects/Case/fields/LT_Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Overdue__c</fullName>
    <description>Verdadeiro quando o chamado esta aberto e passou do prazo de SLA.</description>
    <label>Fora do Prazo</label>
    <formula>AND(NOT(IsClosed), NOT(ISBLANK(LT_Resolution_Deadline__c)), NOW() &gt; LT_Resolution_Deadline__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>