force-app/main/default/objects/Case/fields/LT_Loss_Claim__c.field-meta.xml
<CustomField>
    <fullName>LT_Loss_Claim__c</fullName>
    <description>Extravio aberto a partir deste chamado.</description>
    <label>Extravio</label>
    <referenceTo>LT_Loss_Claim__c</referenceTo>
    <relationshipLabel>Chamados</relationshipLabel>
    <relationshipName>LT_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>