force-app/main/default/objects/Case/fields/LT_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>LT_Marketplace__c</fullName>
    <description>Marketplace de origem do pedido reclamado.</description>
    <label>Marketplace de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopee</fullName>
            </value>
            <value>
                <fullName>Mercado Livre</fullName>
            </value>
            <value>
                <fullName>Shein</fullName>
            </value>
            <value>
                <fullName>TikTok Shop</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Magalu</fullName>
            </value>
            <value>
                <fullName>Loja Propria</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>