force-app/main/default/objects/Case/fields/LT_PNR_Flag__c.field-meta.xml
<CustomField>
    <fullName>LT_PNR_Flag__c</fullName>
    <description>Marcado quando o chamado nao foi tratado no prazo e virou PNR (Paguei Nao Recebi).</description>
    <label>Virou PNR</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>