force-app/main/default/objects/Case/fields/LT_Reimbursement_Value__c.field-meta.xml
<CustomField>
    <fullName>LT_Reimbursement_Value__c</fullName>
    <description>Valor a ressarcir ao embarcador em caso de extravio/avaria confirmados.</description>
    <label>Valor de Ressarcimento</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>