force-app/main/default/objects/Case/fields/LT_Resolution_Deadline__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolution_Deadline__c</fullName>
    <description>Data/hora limite para resolver o chamado.</description>
    <label>Prazo de Resolucao (SLA)</label>
    <type>DateTime</type>
</CustomField>