force-app/main/default/objects/Case/fields/LT_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>LT_Root_Cause__c</fullName>
    <description>Causa raiz apurada pelo SAC.</description>
    <label>Causa Raiz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falha do Motorista</fullName>
            </value>
            <value>
                <fullName>Falha da Base</fullName>
            </value>
            <value>
                <fullName>Endereco Incorreto</fullName>
            </value>
            <value>
                <fullName>Extravio Interno</fullName>
            </value>
            <value>
                <fullName>Avaria em Transporte</fullName>
            </value>
            <value>
                <fullName>Problema Sistemico</fullName>
            </value>
            <value>
                <fullName>Informacao Incorreta do Cliente</fullName>
            </value>
            <value>
                <fullName>Sem Culpa da LogiTrack</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>