force-app/main/default/objects/Case/fields/LT_Shipment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment__c</fullName>
    <description>Remessa objeto da reclamacao.</description>
    <label>Remessa</label>
    <referenceTo>LT_Shipment__c</referenceTo>
    <relationshipLabel>Chamados SAC</relationshipLabel>
    <relationshipName>LT_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>