force-app/main/default/objects/Case/fields/LT_SLA_Violated__c.field-meta.xml
<CustomField>
    <fullName>LT_SLA_Violated__c</fullName>
    <description>Marcado automaticamente quando um milestone do chamado (primeira resposta ou resolucao) estoura o prazo.</description>
    <label>SLA Violado</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>