force-app/main/default/objects/Case/recordTypes/LT_Agilizacao.recordType-meta.xml
<RecordType>
    <fullName>LT_Agilizacao</fullName>
    <active>true</active>
    <businessProcess>LT_SAC_Process</businessProcess>
    <description>Cliente solicita agilizacao da entrega por falta de evolucao no rastreamento.</description>
    <label>Agilizacao de Entrega</label>
</RecordType>