force-app/main/default/objects/Case/recordTypes/LT_Assinado_Nao_Recebido.recordType-meta.xml
<RecordType>
    <fullName>LT_Assinado_Nao_Recebido</fullName>
    <active>true</active>
    <businessProcess>LT_SAC_Process</businessProcess>
    <description>Pedido consta como entregue no app, mas o cliente afirma que nao recebeu. Encaminhado ao motorista para resolucao; se nao tratado no prazo, vira PNR.</description>
    <label>Assinado nao Recebido</label>
</RecordType>