force-app/main/default/objects/Case/recordTypes/LT_Avaria_Pos_Entrega.recordType-meta.xml
<RecordType>
    <fullName>LT_Avaria_Pos_Entrega</fullName>
    <active>true</active>
    <businessProcess>LT_SAC_Process</businessProcess>
    <description>Pedido chegou avariado/quebrado. Motorista e informado e a remessa segue para extravio/ressarcimento.</description>
    <label>Avaria apos a Entrega</label>
</RecordType>