force-app/main/default/objects/Case/recordTypes/LT_PNR.recordType-meta.xml
<RecordType>
    <fullName>LT_PNR</fullName>
    <active>true</active>
    <businessProcess>LT_SAC_Process</businessProcess>
    <description>Chamado de Assinado nao Recebido que nao foi tratado no prazo. Segue para extravio e ressarcimento ao embarcador.</description>
    <label>PNR - Paguei Nao Recebi</label>
</RecordType>