force-app/main/default/objects/Case/recordTypes/LT_Postura_Motorista.recordType-meta.xml
<RecordType>
    <fullName>LT_Postura_Motorista</fullName>
    <active>true</active>
    <businessProcess>LT_SAC_Process</businessProcess>
    <description>Reclamacao sobre conduta ou falta de respeito do motorista. Se confirmada pelo SAC, o motorista e penalizado.</description>
    <label>Postura do Motorista</label>
</RecordType>