force-app/main/default/objects/Case/validationRules/LT_CSAT_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_CSAT_Score_Range</fullName>
    <active>true</active>
    <description>A nota CSAT deve ficar entre 1 e 5.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_CSAT_Score__c)), OR(LT_CSAT_Score__c &lt; 1, LT_CSAT_Score__c &gt; 5))</errorConditionFormula>
    <errorDisplayField>LT_CSAT_Score__c</errorDisplayField>
    <errorMessage>A nota CSAT deve ser um numero de 1 a 5.</errorMessage>
</ValidationRule>